objects/Feedback__c.object
<CustomObject>
    <description>Primary Object holding User Feedback</description>
    <fields>
        <fullName>Data_Steward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field will serve to allow for automated record association to user assigned in other Department.</description>
        <inlineHelpText>User responsible for making sure this record is addressed appropriately.</inlineHelpText>
        <label>Data Steward</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field will hold Description of Feedback (Idea, Good, Bad, Question)</description>
        <inlineHelpText>In your words, describe your Feedback.</inlineHelpText>
        <label>Feedback Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Function__c</fullName>
        <description>This field will hold the brief description of what the submitter wants to see in a new Publisher action or Layout Update</description>
        <inlineHelpText>Briefly describe your suggestion for improvement</inlineHelpText>
        <label>Proposal of improvement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ease_of_Use__c</fullName>
        <label>Ease of Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Easy</fullName>
                </value>
                <value>
                    <fullName>Easy</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Hard</fullName>
                </value>
                <value>
                    <fullName>Very Hard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>This field will hold the email address of the user submitting feeedback</description>
        <inlineHelpText>Populate this field with your preferred email address.</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Feedback_Type__c</fullName>
        <description>This field will hold the Type of Feedback you are submitting.</description>
        <inlineHelpText>&quot;Idea&quot; -  (Functionality that would improve this feature)
&quot;Improvement&quot; - (You want to report a Bug or deficient behavior that could use a re-working)
&quot;Praise&quot; - (Tell us what you like)</inlineHelpText>
        <label>Feedback Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Idea</fullName>
                </value>
                <value>
                    <fullName>Improvement</fullName>
                </value>
                <value>
                    <fullName>Praise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will hold a check box for those that wish to remain informed of their submittal.</description>
        <inlineHelpText>Check this box to have S1 team follow up with you regarding your submittal</inlineHelpText>
        <label>Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Feedback_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cannot reproduce</fullName>
                </value>
                <value>
                    <fullName>Every once in a while</fullName>
                </value>
                <value>
                    <fullName>Every time</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Happiness__c</fullName>
        <label>Happiness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3 - Happy</fullName>
                    <color>#009900</color>
                    <label>I like</label>
                </value>
                <value>
                    <fullName>1 - Sad</fullName>
                    <color>#990000</color>
                    <label>Can be better</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <inlineHelpText>Select the object for which you would like to provide a specific feedback.</inlineHelpText>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Opportunity Line</fullName>
                </value>
                <value>
                    <fullName>Commercial Action Plan</fullName>
                </value>
                <value>
                    <fullName>Support Request</fullName>
                </value>
                <value>
                    <fullName>Quote Link</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Home Page</fullName>
                </value>
                <value>
                    <fullName>Account Plan</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>SPA Request</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Master Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>This field will hold the Phone number of the Submitter.</description>
        <inlineHelpText>Populate this field to receive a call from S1 for Follow-up.</inlineHelpText>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Follow_up__c</fullName>
        <label>Preferred Method of Follow-up</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Follow-up</fullName>
                    <default>true</default>
                    <label>No Follow-up</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>This field will be used to hold User response to &quot;Rating&quot; the SF1 application.</description>
        <inlineHelpText>Please rate the Salesforce1 Application.</inlineHelpText>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Star</fullName>
                </value>
                <value>
                    <fullName>2 Stars</fullName>
                </value>
                <value>
                    <fullName>3 Stars</fullName>
                    <default>true</default>
                    <label>3 Stars</label>
                </value>
                <value>
                    <fullName>4 Stars</fullName>
                </value>
                <value>
                    <fullName>5 Stars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce_Issue__c</fullName>
        <description>This field will hold your &quot;Steps to Reproduce&quot; the behavior you feel needs improvement / Bug.</description>
        <inlineHelpText>Enter the &quot;Steps to reproduce&quot; the behavior noted in your entry of field &lt;Description&gt;.</inlineHelpText>
        <label>Steps to Reproduce Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Change__c</fullName>
        <label>Type of Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Improvement__c</fullName>
        <label>Type of Improvement</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Feedback_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Layout Update</fullName>
                    <default>true</default>
                    <label>Layout Update</label>
                </value>
                <value>
                    <fullName>New Feature</fullName>
                </value>
                <value>
                    <fullName>Publisher Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usefulness__c</fullName>
        <label>Usefulness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Great</fullName>
                </value>
                <value>
                    <fullName>Superior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All_Feedback_Records</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Data_Steward__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Feedback_Type__c</columns>
        <columns>Happiness__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Rating__c</columns>
        <columns>Status__c</columns>
        <columns>Usefulness__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Feedback Records</label>
    </listViews>
    <listViews>
        <fullName>All_Feedback_Records_raquel</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>Data_Steward__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Feedback_Type__c</columns>
        <columns>Happiness__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Rating__c</columns>
        <columns>Status__c</columns>
        <columns>Usefulness__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Feedback Records_raquel</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S1F-{00000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <recordTypes>
        <fullName>Admin</fullName>
        <active>true</active>
        <description>Record Type used by Admins to see all data.</description>
        <label>Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Idea</fullName>
        <active>true</active>
        <description>Record Type used when Record is logged Feedback Type - Idea</description>
        <label>Idea</label>
    </recordTypes>
    <recordTypes>
        <fullName>Improvement</fullName>
        <active>true</active>
        <description>Record Type used when Record is logged Feedback Type - Improvement</description>
        <label>Improvement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Praise</fullName>
        <active>true</active>
        <description>Record Type used when Record is logged Feedback Type - Praise</description>
        <label>Praise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <label>Sales</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Make_sure_Method_of_FU_has_a_value_Email</fullName>
        <active>true</active>
        <description>This Validation rule will measure the method of follow-up to be sure the required contains a valid entry for Email.</description>
        <errorConditionFormula>AND
( ISPICKVAL( Preferred_Method_of_Follow_up__c , &quot;Email&quot;),
 ISBLANK(Email_Address__c))</errorConditionFormula>
        <errorDisplayField>Email_Address__c</errorDisplayField>
        <errorMessage>If you will provide us an email address, we will gladly keep you informed about your submittal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_sure_Method_of_FU_has_a_value_Phone</fullName>
        <active>true</active>
        <description>This Validation rule will measure the method of follow-up to be sure the required contains a valid entry for Phone.</description>
        <errorConditionFormula>AND
( ISPICKVAL( Preferred_Method_of_Follow_up__c , &quot;Phone&quot;),
 ISBLANK( Phone_Number__c ))</errorConditionFormula>
        <errorDisplayField>Phone_Number__c</errorDisplayField>
        <errorMessage>If you will provide us a phone number where you can be reached, we will gladly keep you informed about your submittal.</errorMessage>
    </validationRules>
</CustomObject>